--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -986,3 +986,12 @@ table.report td {
 table.translation_module_table {
     width: 55%;
 }
+
+/* Project Task Time Inline Form*/
+select#sub_defaulttime_defaulttime_person_id_edit_none {
+    width: 150px;
+}
+input#sub_defaulttime_defaulttime_hours_edit_none {
+    width: 60px;
+}
+	
