--- a/views/_report.html
+++ b/views/_report.html
@@ -19,21 +19,26 @@
     <div id='chart-opts' style='padding-bottom:10px;'>
       {{=report_data.layer_label}}
       {{if report_data.row_label:}}
-        <a href="#" id="pie_chart_rows"><img src="/{{=appname}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>
-        <a href="#" id="vbar_chart_rows"><img src="/{{=appname}}/static/img/report/vchart.png" style="vertical-align:middle;"/></a>
+        <a class="chart-icon" id="pie_chart_rows"><img src="/{{=appname}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>
+        <a class="chart-icon" id="vbar_chart_rows"><img src="/{{=appname}}/static/img/report/vchart.png" style="vertical-align:middle;"/></a>
         {{=report_data.row_label}}
       {{pass}}
       {{if report_data.col_label:}}
-        <a href="#" id="pie_chart_cols"><img src="/{{=appname}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>
-        <a href="#" id="vbar_chart_cols"><img src="/{{=appname}}/static/img/report/vchart.png" style="vertical-align:middle;"/></a>
+        <a class="chart-icon" id="pie_chart_cols"><img src="/{{=appname}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>
+        <a class="chart-icon" id="vbar_chart_cols"><img src="/{{=appname}}/static/img/report/vchart.png" style="vertical-align:middle;"/></a>
         {{=report_data.col_label}}
       {{pass}}
     </div>
   {{pass}}
 {{except:}}{{pass}}
 <div id='chart-container' class='hide'>
-  {{=A(T("Hide Chart"), _href="#", _id="hide-chart", _class="action-lnk")}}
-  <div id='chart' style='height:400px;'></div>
+  <div class='chart-control'>
+    {{=A(T("Hide Chart"), _href="#", _id="hide-chart", _class="action-lnk")}}
+  </div>
+  <div class='chart-contents'>
+    <div id='chart-header'></div>
+    <div id='chart' style='height:360px;'></div>
+  </div>
 </div>
 <div id='table-container'>
   {{=items}}
@@ -49,6 +54,8 @@
 {{except:}}var json_data={cols:null, rows:null}{{pass}}
 //]]></script>
 {{if s3.debug:}}
+<script language="javascript" type="text/javascript" src="/{{=appname}}/static/scripts/flot/jquery.flot.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=appname}}/static/scripts/flot/jquery.flot.pie.js"></script>
 <script language="javascript" type="text/javascript" src="/{{=appname}}/static/scripts/jquery.jqplot.js"></script>
 <script language="javascript" type="text/javascript" src="/{{=appname}}/static/scripts/jqplot_plugins/jqplot.pieRenderer.js"></script>
 <script language="javascript" type="text/javascript" src="/{{=appname}}/static/scripts/jqplot_plugins/jqplot.barRenderer.js"></script>
