Migrate bar charts to flot.

--- a/static/themes/default/report.css
+++ b/static/themes/default/report.css
@@ -28,6 +28,7 @@
 .chart-contents {
     background-color: #FFFDF6;
     padding-left: 8px;
+    padding-right: 8px;
     border: 1px solid #999;
     margin-top: 5px;
     margin-bottom: 5px;
