--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -912,6 +912,19 @@ div.form-container form fieldset  .s3-checkboxes-widget label {
     vertical-align: middle;
 }
 
+/* Separate search fields. Labels are centered, so if field widget is multiple
+lines long, especially adjacent checkboxes, users report it's hard to tell
+which options go with which field. */
+.search_form td {
+    border-top: 1px solid #D9D9D9;
+}
+.search_form tr:first-child > td {
+    border-top: 0px;
+}
+.search_form table.s3-checkboxes-widget td {
+    border-top: 0px;
+}
+
 .widget-org-hierarchy-menu {
     overflow:auto;
     height:10em;
