--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -70,6 +70,10 @@ hr { /* This hr replaces the bootstrap one */
     color: #F00;
 }
 
+.nounderline:hover {
+    text-decoration: none;
+}
+
 #logo {
     float: left;
     /* The logo image must be 75px height */
@@ -465,7 +469,7 @@ td.filled ul li a {
 .specialmargin {
     width: 90%;
     padding: 1% 4%;
-    background: #444;
+    background: #222;
     border-top: 1px solid #999;
     border-bottom: 1px solid #999;
     padding: 40px 4.52%;
@@ -477,11 +481,13 @@ td.filled ul li a {
 }
 
 .note #view-note a {
-    color: #FFF;
+    color: #000;
+    padding: 0px 5px 0px 5px;
 }
 
 .note #edit-note a {
-    color: #FFF;
+    color: #000;
+    padding: 0px 5px 0px 5px;
 }
 
 #debate td, th {
@@ -502,26 +508,29 @@ tbody td.criteria-title, tbody th.criteria-title {
 
 .handler {
     float: left;
-    height: 10px;
+    height: 18px;
     width: 110px;
-    background-color: #867794;
+    background-color: rgba(255, 255, 255, 0.6);
+    /*background-color: #867794;*/
     margin: -5px 0px 0px -5px;
 }
 
-.deletenote {
-    float: right;
-    background: #F00;
-    border: 1px solid #666;
-    height: 8px;
-    width: 8px;
-    line-height: 6px;
+.deletenote a {
+    text-decoration: none;
+    color: #F00;
+    padding: 0px 5px 0px 5px;
+}
+
+.deletenote a:hover {
+    text-decoration: none;
+    color: #F00;
 }
 
 .note, .note-alpha {
     background-color: #dbdbfb; /*#b9a6cf; /*url('../assets/note.png');*/
     font-size: 0.8em;
     width: 100px;
-    height: 70px;
+    height: 100px;
     float: left;
     margin: 5px;
     padding: 5px;
