--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -93,7 +93,7 @@ form tr td table.embeddedComponent td {
     padding: 0 5px;
     border-bottom: 0;
     border-left: 0;
-} 
+}
 table.embeddedComponent tr.label-row td {
     text-align: center;
     color: #B3B3B3;
@@ -912,13 +912,18 @@ div.form-container form fieldset  .s3-checkboxes-widget label {
     vertical-align: middle;
 }
 
-.search_form td {
+.search_form td,
+#filter_options td {
     border-top: 1px solid #D9D9D9;
 }
-.search_form tr:first-child > td {
+.search_form tr:first-child > td,
+#filter_options tr:first-child > td {
     border-top: 0px;
 }
-.search_form table.s3-checkboxes-widget td {
+.search_form table.s3-checkboxes-widget td,
+.search_form table.s3searchminmaxwidget td,
+#filter_options table.s3-checkboxes-widget td,
+#filter_options table.s3searchminmaxwidget td {
     border-top: 0px;
 }
 
@@ -1010,4 +1015,4 @@ select#sub_defaulttime_defaulttime_person_id_edit_none {
 input#sub_defaulttime_defaulttime_hours_edit_none {
     width: 60px;
 }
-	
+
