Fix ticket #212: Intent mails for all space admins

--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -9,24 +9,6 @@
 
 /* HTML TAGS DEFINITION */
 
-.add-row.btn.primary.small {
-  visibility:hidden;
-}
-
-.poll_info {
-  height: 30px;
-}
-
-.poll_detail {
-  margin-top: 10px;
-  margin-left: 50px;
-}
-.poll_question {
-  color: #006DCC;
-}
-.votes {
-  visibility:hidden;
-}
 body {
 	background: #FAFAFA;
 	padding: 0;
@@ -690,3 +672,24 @@ table {
     display:none;
 }
 /* END DEBATE */
+
+/* VOTES AND POLLS */
+.add-row.btn.primary.small {
+  visibility:hidden;
+}
+
+.poll_info {
+  height: 30px;
+}
+
+.poll_detail {
+  margin-top: 10px;
+  margin-left: 50px;
+}
+.poll_question {
+  color: #006DCC;
+}
+.votes {
+  visibility:hidden;
+}
+/*^END VOTES AND POLLS */
