--- a/static/themes/DRRPP/style.css
+++ b/static/themes/DRRPP/style.css
@@ -35,17 +35,19 @@ strong {
     line-height: 1.25em;
 }
 
-#content h1 {
+#content h1,
+#content h2 {
     font-family: "EraserRegular";
     text-transform: uppercase;
     color: #F5902E;
     font-size: 1.4em;
+    font-weight: bold;
     line-height: 1em;
-    margin: 0 0 5px 0;
+    margin: 0 0 5px 10px;
     clear: left;
 }
 
-#content h2	{
+#content h3	{
     text-transform: uppercase;
     color: #F5902E;
     font-size: 1.2em;
@@ -54,13 +56,13 @@ strong {
     font-weight: bold;
 }
 
-#content h3 {
+#content h4 {
     font-size: 1.2em;
     line-height: 1.2em;
     font-weight: normal;
     margin-bottom: 10px;
 }
-#content h4 {
+#content h5 {
     color: #006699;
     margin-top: 10px;
     font-size: 13px;
@@ -69,8 +71,8 @@ strong {
     margin-bottom: 10px;
 }
 #content ul {
-    list-style-position: inside;
     list-style-type: disc;
+    margin: 0 0 4px 20px;
 }
 
 /* Buttons */
@@ -97,26 +99,10 @@ span.button-left input.button-right,
     text-transform:uppercase;
 }
 
-#auth_user_email {
-    width: 175px;
-}
-#auth_user_password {
-    width: 90px;
-}
-#retrieve-btn {
-    margin-left: 40px;
-}
-
 /* Links should ALWAYS be unvisited */
 a {
     color: #039;
     text-decoration: underline;
-    outline: 0;
-}
-a:hover {
-    color: #c00;
-    text-decoration: none;
-    background-color: #ffffcc;
     outline: 0;
 }
 a:active,
