--- a/private/templates/SandyRelief/views/index.html
+++ b/private/templates/SandyRelief/views/index.html
@@ -26,20 +26,8 @@
    </div>
   {{pass}}
  </div>
+{{else:}}
+{{=XML(big_buttons)}}
 {{pass}}
-{{=manage_facility_box}}
-{{=requests_box}}
 </div>
 </div>
-<div id='about'>
- <p>
-  This site is for volunteer groups providing supplies & helping hands to people affected by Hurricane Sandy.
- </p>
-</div>
-{{if settings.frontpage.rss:}}
-<div id='feed-control'>
- <span style="color:#676767;font-size:11px;margin:10px;padding:4px;">{{=T("Loading")}}...</span>
-</div>
-{{pass}}
-{{if requests_box:}}
-{{include "dataTables.html"}}{{pass}}
