--- a/private/templates/SandyRelief/views/footer.html
+++ b/private/templates/SandyRelief/views/footer.html
@@ -1,6 +1,5 @@
-{{if settings.ui.get("social_buttons"):}}<div id="socialmedia_share"></div>{{pass}}
+<a href="/{{=appname}}/default/index/contact" class="action-btn">HELP</a>
 <p id="poweredby">
     <img src='/{{=appname}}/static/img/S3menu_logo.png' width='30' height='28' style='vertical-align: middle;' alt='{{=T("Powered by Sahana Eden")}}' /><a target='_blank' href='http://eden.sahanafoundation.org' title='{{=T("Powered by Sahana Eden")}}'>{{=T("Powered by Sahana Eden")}}</a>
 </p>
 <div class="cf"></div>
-
