Debate popover now accepts HTML code

--- a/src/apps/ecidadania/debate/templates/debate/debate_view.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_view.html
@@ -182,6 +182,7 @@
             $(".note").popover({
                 placement : 'top',
                 trigger: 'hover',
+                html: true,
                 delay: { show: 500, hide: 100 }
             });
         });
