--- a/src/apps/ecidadania/debate/templates/debate/debate_outdated.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_outdated.html
@@ -13,7 +13,7 @@
 
     <div class="row">
         <div class="span12">
-            <h4>{% trans "Can't view this debate" %}</h4>
+            <h4>{% trans "Can't view this debate" %}: {{ debate.title }}</h4>
             <p>{% trans "It seems that the debate you're trying to access is either <strong>not started</strong> or it <strong>expired</strong>." %}</p>
             <div class="row">
                 <div class="span6">
